--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ html, body {
     text-decoration: none;
     color: white;
     gap: 10px;
-    margin-right: auto;
+    margin-right: auto; /* Pushes buttons away */
 }
 
 .topbar .logo {
@@ -102,6 +102,61 @@ html, body {
 .topbar .button:hover {
     font-size: 22px;
     text-shadow: white 0 0 10px;
+}
+
+.contact {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    border: white 2px solid;
+    border-radius: 20px;
+    padding: 30px;
+    box-sizing: border-box;
+    width: 80%;
+    max-width: 600px;
+    text-align: center;
+    z-index: 1001;
+}
+
+.contact .note {
+    font-size: 15px;
+    color: #595959;
+}
+
+.contact .text {
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.contact-input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+    font-size: 18px;
+    box-sizing: border-box;
+}
+
+.submit-button {
+    background-color: rgba(29, 29, 29, 0.5);
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100%;
+}
+
+.submit-button:hover {
+    border: 1px solid white;
+    background-color: rgba(66, 66, 66, 0.5);
 }
 
 .about-container {
